# static-code-smell-detector

./: CMakeLists.txt  Detector.cpp  Detector.h  Function.cpp  Function.h  Jaccard.cpp  Jaccard.h  README.md  RegexKeeper.cpp  RegexKeeper.h  StringUtility.cpp  StringUtility.h  main.cpp  regex.txt
testFiles/: basictest_unique.cpp  classmethods.cpp  complexmethods.cpp  dummtext.txt  dummy.cpp  headerfiletest.h  signatures.cpp  simplemethods.cpp  test.cpp  test1.cpp
